Fixed an issue where the beatmap cards wouldn't be aligned correctly on the right side of the autosizer

--- a/src/component/beatmaps/Beatmaps.scss
+++ b/src/component/beatmaps/Beatmaps.scss
@@ -133,7 +133,7 @@
     margin: $padding-smallest auto;
 
     .beatmap-scroll-container {
-      //background-color: $color-primary;
+      background-color: $color-primary;
       border-radius: 3px;
     }
 
